--- a/stadium/book_stadium/templates/book_stadium/history_booked_of_user.html
+++ b/stadium/book_stadium/templates/book_stadium/history_booked_of_user.html
@@ -19,7 +19,7 @@
         <h1>Lịch sử đặt sân</h1>
         <div class="history-booked">
             <div class="history-table">
-                <table class="table table-bordered">
+                <table class="content-table">
                     <thead>
                       <tr>
                         <th scope="col">Ngày</th>
@@ -104,7 +104,6 @@
 
             <div class="history-filter shadow">
                 <h2>Lọc</h2>
-                <hr>
                 <form action="" method="GET">
                     <div class="mb-3">
                       <label for="start-day" class="form-label">Từ ngày: </label>
@@ -114,7 +113,7 @@
                       <label for="end-day" class="form-label">Đến ngày: </label>
                       <input type="text" class="form-control" id="end-day" name="end-day">
                     </div>
-                    <button type="submit" class="btn btn-primary">Lọc kết quả</button>
+                    <button type="submit" class="btn btn-outline-info">Lọc kết quả</button>
                 </form>
             </div>
         </div>
