--- a/stadium/book_stadium/templates/password_reset/password_change.html
+++ b/stadium/book_stadium/templates/password_reset/password_change.html
@@ -12,15 +12,17 @@
             {{message}}
         </div>
     {% endfor %}
-    <h1>Thay đổi mật khẩu</h1>
-    <form class="change-password" action="" method="POST">
-        {% csrf_token %}
-        {{ form|crispy }}
-        <div class="change-password-btn">
-            <button type="submit" class="btn btn-primary">Đổi mật khẩu</button>
-        </div>
+    <div class="wrapper">
+        <h2>Thay đổi mật khẩu</h2>
+        <form class="change-password" action="" method="POST">
+            {% csrf_token %}
+            {{ form|crispy }}
+            <div class="change-password-btn">
+                <button type="submit" class="btn btn-outline-info">Đổi mật khẩu</button>
+            </div>
+        </form>
+    </div>
 
-    </form>
 {% endblock %}
 
 {% block javascript %}
