--- a/stadium/book_stadium/templates/password_reset/password_reset.html
+++ b/stadium/book_stadium/templates/password_reset/password_reset.html
@@ -7,12 +7,14 @@
 {% endblock %}
 
 {% block content %}
-    <h2>Khôi phục mật khẩu</h2>
-    <p>Bạn quên mật khẩu? Nhập email của bạn ở phía dưới, và chúng tôi sẽ gửi đến cho bạn một hướng dẫn để thiết lập mật khẩu mới!</p>
-    <form action="" method="POST">
-        {% csrf_token %}
-        {{ form|crispy }}
+    <div class="wrapper">
+        <h2>Khôi phục mật khẩu</h2>
+        <p>Nhập email của bạn ở phía dưới, và chúng tôi sẽ gửi đến cho bạn một hướng dẫn để thiết lập mật khẩu mới!</p>
+        <form action="" method="POST">
+            {% csrf_token %}
+            {{ form|crispy }}
 
-        <button type="submit" class="btn btn-primary">Gửi email</button>
-    </form>
+            <button type="submit" class="btn btn-outline-info">Gửi email</button>
+        </form>
+    </div>
 {% endblock %}
