--- a/stadium/book_stadium/templates/password_reset/password_reset_confirm.html
+++ b/stadium/book_stadium/templates/password_reset/password_reset_confirm.html
@@ -3,13 +3,15 @@
 {% load static %}
 
 {% block css %}
-    <link rel="stylesheet" href="{% static 'css/password_reset.css' %}">
+    <link rel="stylesheet" href="{% static 'css/password_reset_confirm.css' %}">
 {% endblock %}
 {% block content %}
-    <h3>Nhập mật khẩu mới</h3>
-    <form action="" method="POST">
-        {% csrf_token %}
-        {{ form|crispy }}
-        <button type="submit" class="btn btn-primary">Cập nhật mật khẩu</button>
-    </form>
+    <div class="wrapper">
+        <h2>Nhập mật khẩu mới</h2>
+        <form action="" method="POST">
+            {% csrf_token %}
+            {{ form|crispy }}
+            <button type="submit" class="btn btn-outline-info">Cập nhật mật khẩu</button>
+        </form>
+    </div>
 {% endblock %}
