--- a/stadium/static/css/base.css
+++ b/stadium/static/css/base.css
@@ -64,9 +64,13 @@ header {
     justify-content: space-between;
 }
 
+.modal-footer a {
+    color: #2c3e50;
+}
+
 a {
     text-decoration: none;
-    color: #2c3e50;
+    color: #ffffff;
 }
 
 a:hover {
