--- a/stadium/static/css/password_reset.css
+++ b/stadium/static/css/password_reset.css
@@ -3,6 +3,27 @@
     align-items: center;
 }
 
+.wrapper {
+    border: 1px solid black;
+    margin-top: 110px;
+}
+
+.wrapper > h2 {
+    text-align: center;
+    background: #2c3e50;
+    color: #ffffff;
+    padding: 15px;
+}
+
+.wrapper > p {
+    text-align: center;
+    padding: 15px;
+}
+
+#div_id_email {
+    width: 50%
+}
+
 form button {
     margin: 4% 5%;
 }
