--- a/stadium/static/css/history_booked_of_user.css
+++ b/stadium/static/css/history_booked_of_user.css
@@ -18,12 +18,17 @@
 
 .history-filter {
     width: 20%;
-    height: 60%;
-    padding: 1% 5%;
 }
 
-.history-filter h2 {
+.history-filter > h2 {
+    background: #2c3e50;
+    color: #ffffff;
+    padding: 15px;
     text-align: center;
+}
+
+.history-filter > form {
+    padding: 10%;
 }
 
 .history-booked {
@@ -31,11 +36,28 @@
     justify-content: space-around;
 }
 
-.history-table button {
-    padding: 1% 8%;
-    margin-bottom: -7px;
+.content-table {
+    border-collapse: collapse;
+    min-width: 1100px;
+    border-radius: 5px 5px 0 0;
+    overflow: hidden;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
 }
 
-.history-table td.last-td {
-    text-align: center;
+.content-table thead tr {
+    background-color: #2c3e50;
+    color: #dddddd;
+}
+
+.content-table th,
+.content-table td {
+    padding: 12px 15px;
+}
+
+.content-table tbody tr {
+    border-bottom: 1px solid #dddddd;
+}
+
+.content-table tbody tr:last-of-type {
+    border-bottom: 5px solid #2c3e50;
 }
