--- a/stadium/static/css/password_change.css
+++ b/stadium/static/css/password_change.css
@@ -1,6 +1,21 @@
 .change-password {
     display: block;
+    width: 60%;
+    margin: auto;
 
+}
+
+.wrapper {
+    border: 1px solid black;
+    width: 30%;
+    margin-top: 110px;
+}
+
+.wrapper > h2 {
+    color: #ffffff;
+    background: #2c3e50;
+    text-align: center;
+    padding: 15px;
 }
 
 .col {
