--- a/stadium/static/css/password_reset_confirm.css
+++ b/stadium/static/css/password_reset_confirm.css
@@ -1,32 +1,38 @@
 .col {
-    display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-.content-section {
-    width: 30%;
+.wrapper {
     border: 1px solid black;
     margin-top: 110px;
 }
 
-.content-section > h2 {
+.wrapper > h2 {
     text-align: center;
     background: #2c3e50;
     color: #ffffff;
     padding: 15px;
 }
 
-.alert-primary {
-    width: 80%;
+.wrapper > p {
     text-align: center;
-    font-size: 30px;
+    padding: 15px;
 }
 
-.alert-success {
-    color: #0f5132;
-    background-color: #d1e7dd;
-    border-color: #badbcc;
+#div_id_email {
+    width: 50%
+}
+
+form {
+    width: 80%;
+    margin: auto;
+}
+
+#div_id_new_password2 {
     width: 100%;
-    text-align: center;
+}
+
+form button {
+    margin: 4% 5%;
 }
