--- a/stadium/book_stadium/templates/book_stadium/owner_profit.html
+++ b/stadium/book_stadium/templates/book_stadium/owner_profit.html
@@ -7,27 +7,24 @@
 {% endblock %}
 
 {% block content %}
-    <h1>Doanh thu </h1>
+    <h1 id="title">Doanh thu </h1>
     <div class="two-recent-month-profit">
         <h3>Doanh thu tháng này: {{ stadium_sales_of_two_recent_months.current_month_sales|intcomma:False }}vnđ</h3>
         <h3>Doanh thu tháng trước: {{ stadium_sales_of_two_recent_months.last_month_sales|intcomma }}vnđ</h3>
     </div>
 
-    <div class="show-charts">
+    <!-- <div class="show-charts">
         <button class="btn btn-primary" id="this-month-show" >Biểu đồ doanh thu của tháng này</button>
         <button class="btn btn-primary" id="twelve-months-show" >Biểu đồ doanh thu trong vòng 12 tháng gần nhất</button>
-    </div>
-    
+    </div> -->
+
     <div class="row" id='twelve-months-charts'>
 
     </div>
 
     <div class="row" id='this-month-charts'>
-        <!-- <div class="col-sm-5">
-            <canvas id="chart" width="400" height="400"></canvas>
-        </div> -->
     </div>
-    
+
 
 {% endblock %}
 
